k8s/sandbox-service.yml
apiVersion: v1
kind: Service
metadata:
  name: sandbox-service
  namespace: default
spec:
  selector:
    app: sandbox
  type: ClusterIP
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
  - name: sandbox-service-port
    protocol: TCP
    port: 80
    targetPort: 3000
