k8s/ingress.yml
# https://kubernetes.io/docs/concepts/services-networking/ingress/#the-ingress-resource

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: proton-ingress
  namespace: default
  labels:
    app.kubernetes.io/name: proton-ingress 
spec:
  ingressClassName: nginx
  rules:
  - http:
       paths:
        - path: "/api/sandbox"
          pathType: Prefix
          backend:
           service:
             name: sandbox-service
             port:
               number: 80

  - host: "*.preview.localhost"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: router-service
            port:
              number: 80

  - host: "*.agent.localhost"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: router-service
            port:
              number: 80
